--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,7 +1,7 @@
-@import '../../Colors.scss';
-@import '../../App.scss';
+    @import '../../Colors.scss';
+    @import '../../App.scss';
 
-footer {
+    footer {
     position: fixed;
     bottom: 0;
     width: 100%;
@@ -9,19 +9,21 @@ footer {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: lightgoldenrodyellow;   
-    padding: 5px; 
-img{  
+    background-color: lightgoldenrodyellow;
+    padding: 5px;
+
+    img {
         width: 25px;
         height: 25px;
         margin: 10px;
     }
-    div{
-        @extend %flex
+
+    div {
+        @extend %flex;
     }
-    hr{
+
+    hr {
         color: red;
         border: 1px solid pink;
     }
-
-}
+    }
