--- a/src/components/Products/PrintedProducts.scss
+++ b/src/components/Products/PrintedProducts.scss
@@ -1,15 +1,20 @@
 @import '../../Colors.scss';
 @import '../../App.scss';
 
+.cards-container{
+    @extend %flex;
+    flex-wrap: wrap;
 .card {
     width: 20%;
   padding: 0.8em;
+  margin: 2%;
   background: #f5f5f5;
   position: relative;
   overflow: visible;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 
   .card-img {
+    @extend %flex;
     background-color: #ffcaa6;
     height: 40%;
     width: 100%;
@@ -23,8 +28,7 @@
 
     img {
       width: 100%;
-      height: auto;
-      max-height: 220px;
+      height: 50vh;
       object-fit: cover;
     }
   }
@@ -71,4 +75,5 @@
 svg {
   width: 20px;
   height: 20px;
+}
 }
