--- a/src/App.scss
+++ b/src/App.scss
@@ -16,3 +16,9 @@
     justify-content: center;
     align-items: center;
 }
+html, body, #root {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
