--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,13 +1,18 @@
     @import '../../Colors.scss';
     @import '../../App.scss';
 
+
+    .footerContainer{
+        @extend %flex;
+        height: 100%;
+        align-items: flex-end
+    }
     footer {
-    position: fixed;
-    bottom: 0;
     width: 100%;
+    position: relative;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items:center;
     justify-content: center;
     background-color: lightgoldenrodyellow;
     padding: 5px;
