--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,9 @@
-*{
-    text-decoration: none;
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
+// *{
+//     text-decoration: none;
+//     padding: 0;
+//     margin: 0;
+//     box-sizing: border-box;
+// }
 
 %flex{
     display: flex;
