solucionado problema scss login

--- a/src/Colors.scss
+++ b/src/Colors.scss
@@ -1,2 +1,10 @@
 $border: blue;
-$bg: pink
+$bg: pink;
+$buttons: rgb(250, 250, 186);
+$input-focus-color: #2d8cf0;
+$font-color: #323232;
+$font-color-sub: #666;
+$bg-color: #fff;
+$bg-color-alt: #666;
+$main-color: #323232;
+
