--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,15 @@
-// *{
-//     text-decoration: none;
-//     padding: 0;
-//     margin: 0;
-//     box-sizing: border-box;
-// }
+*{
+    text-decoration: none;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+
+    body {
+        height: 100%;
+        margin: 0;
+        flex-direction: column;
+    }
+}
 
 %flex{
     display: flex;
@@ -11,14 +17,9 @@
     align-items: center;
 
 }
+
 .root{
     display: flex;
     justify-content: center;
     align-items: center;
-}
-html, body, #root {
-    height: 100%;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
 }
