--- a/src/components/Orders/Orders.scss
+++ b/src/components/Orders/Orders.scss
@@ -1,148 +1,65 @@
-// @import "../../Colors.scss";
-// body {
-//     font-family: Arial, sans-serif;
-//     margin: 0;
-//     padding: 0;
-// }
+@import "../../App.scss";
 
-// .container {
-//     background-color: rgb(200, 226, 247);
-//     margin: 0 auto;
-//     padding: 20px;
-// }
-
+.ordersContainer {
+    display: flex;
+    background-color: rgb(244, 244, 184);
+    padding: 25px;
+    margin: 2%;
+    border-radius: 7px;
+    
+    overflow-x: scroll;
+    overflow-y: hidden;
 
 
-// .panel {
-//     border: 1px solid $border;
-//     border-radius: 4px;
-//     margin-bottom: 20px;
-// }
+.orderInfo {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    text-align: center;
+    margin-bottom: 10px;
+    margin: 5%;
+    padding: 5%;
+}
+}
+.orderCard{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    background-color: lightblue;
+    margin: 1%;
+    border-radius: 7px;
+    padding: 1%;
+}
+.productContainer {
+        display: flex;
+        overflow-x: scroll;
+        overflow-y: hidden;
+        width: 100%;
+        background-color: lightblue;
+        padding: 10px;
+        border-radius: 7px;
+        margin-top: 10px;
+    }
+.product {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding: 2%;
+    margin: 2%;
+    gap: 15px;
+    background-color: aliceblue;
+    border-radius: 7px;
+    transition: transform 0.3s ease;
 
-// .panel-heading {
-//     background-color: #f5f5f5;
-//     border-bottom: 1px solid $border;
-//     padding: 10px 15px;
-//     border-top-left-radius: 3px;
-//     border-top-right-radius: 3px;
-// }
+    &:hover {
+        transform: scale(1.1);
+    }
+}
 
-// .panel-heading h3 {
-//     margin: 0;
-//     font-size: 24px;
-// }
-
-// .panel-body {
-//     padding: 15px;
-// }
-
-
-
-// .img-thumbnail {
-//     padding: 4px;
-//     line-height: 1.42857143;
-//     background-color: #fff;
-//     border: 1px solid ;
-//     border-radius: 4px;
-//     display: inline-block;
-//     max-width: 100%;
-//     height: auto;
-// }
-
-// .product {
-//     display: flex;
-//     align-items: center;
-//     border-bottom: 1px solid $border;
-//     padding: 10px 0;
-// }
-
-// .product:last-child {
-//     border-bottom: none;
-// }
-
-// .product-image {
-//     flex: 0 0 100px;
-// }
-
-// .product-info {
-//     flex: 1;
-//     padding-left: 10px;
-// }
-
-
-
-// .product-price, .product-total {
-//     text-align: center;
-// }
-
-// .form-inline {
-//     display: flex;
-//     align-items: center;
-// }
-
-// .form-control {
-//     width: 40px;
-//     height: 25px;
-//     margin: 20px;
-//     padding: 6px;
-//     font-size: 14px;
-//     background-color: #fff;
-//     border: 1px solid #ccc;
-//     border-radius: 4px;
-
-// }
-
-// .btn {
-//     display: inline-block;
-//     padding: 6px 12px;
-//     margin-bottom: 0;
-//     font-size: 14px;
-//     font-weight: 400;
-//     text-align: center;
-//     cursor: pointer;
-//     border-radius: 4px;
-//     color: #fff;
-// }
-
-
-// .btn-success {
-//     color: #fff;
-//     background-color: #5cb85c;
-//     border-color: #4cae4c;
-// }
-
-
-
-// .pull-right {
-//     float: right;
-// }
-
-// .img-cart {
-//     max-width: 100px;
-//     height: auto;
-// }
-
-// .summary {
-//     margin-top: 20px;
-// }
-
-// .summary-row {
-//     display: flex;
-//     justify-content: space-between;
-//     padding: 5px 0;
-//     border-top: 1px solid #ddd;
-// }
-
-// .summary-row:first-child {
-//     border-top: none;
-// }
-
-// .summary-label {
-//     font-weight: bold;
-
-// }
-// .product-price{
-//     margin:20px
-// }
-
+img {
+    width: 100%;
+    height: 100px;
+    object-fit: cover;
+    margin-bottom: 10px;
+}
 
