--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -3,65 +3,57 @@
 
 .containerProfile {
     @extend %flex;
-    justify-content: center; 
-    align-items: center; 
-    background-color: #ffe6e6; 
-    padding: 20px;
-    min-height: 100vh; 
-
-.profile {
-    margin: 5%;
-    width: 70vw;
-    background-color: #fff; 
-    border-radius: 8px; 
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
-
-.userInfo {
-    @extend %flex;
-    justify-content: space-between;
-    background-color: #f5f5f5;
-    border-bottom: 1px solid $border;
-    padding: 10px 15px;
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
-    margin: 5%;
-.info{
-    padding: 2%;
-}
-
-img {
-    height: 15vh;
-    border-radius: 50%; 
-    }
-
-    div {
-    height: 20vh;
-    }
-
-    h3 {
-    margin: 0;
-    font-size: 24px;
-    }
-    }
-
-.orders,
-.cart,
-.wishList {
-    @extend %flex;
     justify-content: center;
     align-items: center;
-    background-color: #f9f9f9;
-    padding: 15px;
-    border-radius: 5px;
-    margin: 10px 0; 
-    flex: 1;
-    }
+    background-color: #e0f7fa; 
 
-    .sections {
-        display: flex;
-        justify-content: space-between;
-        flex-direction: column;
-        padding: 10px 0;
-    }
+    .profile {
+        margin: 5%;
+        background-color: #ddd2f1; 
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+        .profileOrdersSection {
+            width: 600px;
+        }
+
+        .userInfo {
+            @extend %flex;
+            justify-content: space-between;
+            background-color: #c8e8f7; 
+            border-bottom: 1px solid $border;
+            padding: 10px 15px;
+            border-top-left-radius: 3px;
+            border-top-right-radius: 3px;
+            margin: 1%;
+
+            .info {
+                padding: 2%;
+            }
+
+            img {
+                height: 15vh;
+                border-radius: 50%;
+            }
+
+            div {
+                height: 20vh;
+            }
+
+            h3 {
+                margin: 0;
+                font-size: 24px;
+            }
+        }
+
+        .profileSection {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding: 15px;
+            border-radius: 5px;
+            margin: 10px 0;
+        }
     }
 }
