--- a/src/components/Register/Register.scss
+++ b/src/components/Register/Register.scss
@@ -100,13 +100,12 @@
 /* card */ 
 
 .flip-card__inner {
-  width: 300px;
-  height: 350px;
+
   position: relative;
   background-color: transparent;
   perspective: 1000px;
-    /* width: 100%;
-    height: 100%; */
+  width: 100%;
+  height: 100%; 
   text-align: center;
   transition: transform 0.8s;
   transform-style: preserve-3d;
@@ -116,9 +115,12 @@
   transform: rotateY(180deg);
 }
 
-.toggle:checked ~ .flip-card__front {
-  box-shadow: none;
+.giro ~ .flip-card__inner {
+  transform: rotateY(180deg);
 }
+// .toggle:checked ~ .flip-card__front {
+//   box-shadow: none;
+// }
 
 .flip-card__front, .flip-card__back {
   padding: 20px;
