--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,9 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: "Fira Mono", monospace;
+    font-weight: 400;
+    font-style: normal;
 
     body {
         height: 100%;
