--- a/src/Colors.scss
+++ b/src/Colors.scss
@@ -1,10 +1,8 @@
 $border: blue;
-$bg: pink;
-$buttons: rgb(250, 250, 186);
-$input-focus-color: #2d8cf0;
-$font-color: #323232;
-$font-color-sub: #666;
-$bg-color: #fff;
-$bg-color-alt: #666;
-$main-color: #323232;
+$marquee: pink;
+
+
+$mainBlue:  rgb(200, 226, 247);
+
+$degrade:  linear-gradient(137.48deg, #fae172 10%, #f897d1 45%, rgba(203, 169, 255, 0.9843137255) 67%, #9bddf7 87%);
 
