--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,34 +1,55 @@
-    @import '../../Colors.scss';
-    @import '../../App.scss';
+@import "../../App.scss";
+@import "../../Colors.scss";
+.footerDiv {
+
+    padding: 2px;
+    border: 2px solid transparent;
+    border-radius: 1rem;
+    background-image: $degrade;
+    background-origin: border-box;
+    background-clip: content-box, border-box;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease;
+}
 
 
-    .footerContainer{
-        @extend %flex;
-        height: 100%;
-        align-items: flex-end
-    }
-    footer {
-    width: 100%;
-    position: relative;
-    display: flex;
+a {
+    text-decoration: none;
+    color: white;
+    margin-right: 1rem;
+    font-size: 1rem;
+}
+
+ img {
+    width: 25px;
+    height: auto;
+}
+
+.footerDiv div button {
+    background: none;
+    border: none;
+    color: white;
+    font-size: 1rem;
+    cursor: pointer;
+    margin-right: 1rem;
+}
+
+.footerDiv div button:hover {
+    text-decoration: underline;
+}
+
+.footerDiv div button:focus {
+    outline: none;
+}
+
+@media (max-width: 768px) {
+    .footerDiv {
     flex-direction: column;
-    align-items:center;
-    justify-content: center;
-    background-color: lightgoldenrodyellow;
-    padding: 5px;
-
-    img {
-        width: 25px;
-        height: 25px;
-        margin: 10px;
+    align-items: center;
     }
 
-    div {
-        @extend %flex;
+    .logo {
+    margin-bottom: 1rem;
     }
+}
 
-    hr {
-        color: red;
-        border: 1px solid pink;
-    }
-    }
