--- a/src/components/Headers/Headers.scss
+++ b/src/components/Headers/Headers.scss
@@ -1,23 +1,60 @@
-@import '../../Colors.scss';
-@import '../../App.scss';
-
-
-.navDiv{
-    width: 100%;
-    background-color: lightgoldenrodyellow;
-    @extend %flex;
+@import"../../App.scss";
+@import "../../Colors.scss";
+.navDiv {
+    display: flex;
     justify-content: space-between;
-    div{
-        @extend %flex;
-        padding: 2%;
-
-        img {
-            height: 40px; 
-        }
-        
-        span{
-            margin: 2%;
-            padding: 0 15px;
-        }
+    align-items: center;
+    padding: 2px;
+    border: 2px solid transparent;
+    border-radius: 1rem;
+    background-image: $degrade;
+    background-origin: border-box;
+    background-clip: content-box, border-box;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease;
+  }
+  
+  .logo img {
+    width: 8rem;
+    height: auto;
+  }
+  
+  .navDiv div {
+    display: flex;
+  }
+  
+  .navDiv div a {
+    text-decoration: none;
+    color: white;
+    margin-right: 1rem;
+    font-size: 1rem;
+  }
+  
+  .navDiv div button {
+    background: none;
+    border: none;
+    color: white;
+    font-size: 1rem;
+    cursor: pointer;
+    margin-right: 1rem;
+  }
+  
+  .navDiv div button:hover {
+    text-decoration: underline;
+  }
+  
+  .navDiv div button:focus {
+    outline: none;
+  }
+  
+  @media (max-width: 768px) {
+    .navDiv {
+      flex-direction: column;
+      align-items: center;
     }
-}
+  
+    .logo {
+      margin-bottom: 1rem;
+    }
+  }
+  
