--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -2,7 +2,7 @@
 @import '../../App.scss';
 
 marquee {
-    background-color: #ffcc00;
+    background-color: $marquee;
     color: #333;
     padding: 10px 0;
     font-size: 1.2em;
@@ -38,7 +38,7 @@ marquee {
 footer {
     text-align: center;
     padding: 10px 0;
-    position: fixed;
+
     width: 100%;
     bottom: 0;
 }
