--- a/src/components/Products/PrintedProducts.scss
+++ b/src/components/Products/PrintedProducts.scss
@@ -5,14 +5,16 @@
     @extend %flex;
     flex-wrap: wrap;
 .printedProductCard {
-    width: 20%;
+
+  width: calc(250px - 2rem);
+  min-width: 50px;
   padding: 0.8em;
   margin: 2%;
   background: #f5f5f5;
   position: relative;
   overflow: visible;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-
+}
   .printedProductImg {
     @extend %flex;
     background-color: #ffcaa6;
@@ -25,10 +27,10 @@
       transform: translateY(-25%);
       box-shadow: rgba(226, 196, 63, 0.25) 0px 13px 47px -5px, rgba(180, 71, 71, 0.3) 0px 8px 16px -8px;
     }
-
-    img {
+  }
+    .imgPrintedProduct {
       width: 100%;
-      height: 50vh;
+      height: 200px;
       object-fit: cover;
     }
   }
@@ -48,7 +50,7 @@
 
   .printedProductTitle {
     font-weight: 900;
-    font-size: 1.2em;
+    font-size: 2vh;
     line-height: 1.5;
   }
 
@@ -66,10 +68,81 @@
       background-color: #ffcaa6;
     }
   }
-}
+
 
 svg {
-  width: 20px;
-  height: 20px;
+  width: 15px;
+  height: 15px;
 }
+
+.cartBtn.hidden {
+  display: none;
+}
+.cartBtn,.likeBtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 12px;
+  box-shadow: rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  background-color: #e8e8e8;
+  border-color: #ffe2e2;
+  border-style: solid;
+  border-width: 9px;
+  border-radius: 22px;
+  transition: transform 400ms cubic-bezier(.68,-0.55,.27,2.5), 
+  border-color 400ms ease-in-out,
+  background-color 400ms ease-in-out;
+  word-spacing: -2px;
+}
+
+@keyframes movingBorders {
+  0% {
+    border-color: #fce4e4;
+  }
+
+  50% {
+    border-color: #ffd8d8;
+  }
+
+  90% {
+    border-color: #fce4e4;
+  }
+}
+
+button:hover {
+  background-color: #eee;
+  transform: scale(105%);
+  animation: movingBorders 3s infinite;
+}
+
+button svg {
+  fill: rgb(255, 110, 110);
+}
+
+@keyframes beatingHeart {
+  0% {
+    transform: scale(1);
+  }
+
+  15% {
+    transform: scale(1.15);
+  }
+
+  30% {
+    transform: scale(1);
+  }
+
+  45% {
+    transform: scale(1.15);
+  }
+
+  60% {
+    transform: scale(1);
+  }
+}
+
+button:hover svg {
+  transform: scale(105%);
+  border-color: #ffd8d8;
+  animation: beatingHeart 1.2s infinite;
 }
