--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -3,12 +3,13 @@
 
 .containerProfile {
     @extend %flex;
-    justify-content: center;
-    align-items: center;
     background-color: #e0f7fa; 
 
     .profile {
         margin: 5%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
         background-color: #ddd2f1; 
         border-radius: 8px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -20,25 +21,24 @@
         .userInfo {
             @extend %flex;
             justify-content: space-between;
-            background-color: #c8e8f7; 
+            background-color:  $mainBlue;
             border-bottom: 1px solid $border;
-            padding: 10px 15px;
-            border-top-left-radius: 3px;
-            border-top-right-radius: 3px;
-            margin: 1%;
+            margin: 25px 25px 0 25px;
+            padding: 5px 50px;
+            min-width: 82vw;
+            border-radius: 5px;
 
             .info {
                 padding: 2%;
             }
 
             img {
-                height: 15vh;
+                width: 100%;
+                height: 125px;
+                object-fit: cover;
                 border-radius: 50%;
             }
 
-            div {
-                height: 20vh;
-            }
 
             h3 {
                 margin: 0;
@@ -51,9 +51,8 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            padding: 15px;
             border-radius: 5px;
-            margin: 10px 0;
+
         }
     }
 }
