--- a/src/Colors.scss
+++ b/src/Colors.scss
@@ -1,6 +1,7 @@
-$border: blue;
-$marquee: pink;
-
+$border: #2d8cf0;
+$marquee: rgba(255, 192, 203, 0.89);
+$fontColor: #323232;
+$fontColorSub: #666;
 
 $mainBlue:  rgb(200, 226, 247);
 
