--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -1,8 +1,8 @@
+@import "../../Colors.scss";
+
 .wrapper {
     height: 76vh;
-    --input-focus: #2d8cf0;
-    --font-color: #323232;
-    --font-color-sub: #666;
+
     --bg-color: #fff;
     --bg-color-alt: #666;
     --main-color: #323232;
@@ -30,7 +30,7 @@
     top: 0;
     width: 100px;
     text-decoration: underline;
-    color: var(--font-color);
+    color: $fontColor;
     font-weight: 600;
 }
 
@@ -41,7 +41,7 @@
     top: 0;
     width: 100px;
     text-decoration: none;
-    color: var(--font-color);
+    color: $fontColor;
     font-weight: 600;
 }
 
@@ -82,7 +82,7 @@
 }
 
 .toggle:checked + .slider {
-    background-color: var(--input-focus);
+    background-color: $border;
 }
 
 .toggle:checked + .slider:before {
@@ -105,8 +105,6 @@ text-decoration: underline;
     position: relative;
     background-color: transparent;
 perspective: 1000px;
-    /* width: 100%;
-    height: 100%; */
     text-align: center;
     transition: transform 0.8s;
     transform-style: preserve-3d;
@@ -128,7 +126,7 @@ perspective: 1000px;
     justify-content: center;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
-    background: lightgrey;
+    background: $marquee;
     gap: 20px;
     border-radius: 5px;
     border: 2px solid var(--main-color);
@@ -164,18 +162,18 @@ perspective: 1000px;
     box-shadow: 4px 4px var(--main-color);
     font-size: 15px;
     font-weight: 600;
-    color: var(--font-color);
+    color: $fontColor;
     padding: 5px 10px;
     outline: none;
   }
   
   .flip-card__input::placeholder {
-    color: var(--font-color-sub);
+    color: $fontColorSub;
     opacity: 0.8;
   }
   
   .flip-card__input:focus {
-    border: 2px solid var(--input-focus);
+    border: 2px solid $border;
   }
   
   .flip-card__btn:active, .button-confirm:active {
@@ -193,6 +191,6 @@ perspective: 1000px;
     box-shadow: 4px 4px var(--main-color);
     font-size: 17px;
     font-weight: 600;
-    color: var(--font-color);
+    color: $fontColor;
     cursor: pointer;
   } 
