--- a/src/components/Products/PrintedProducts.scss
+++ b/src/components/Products/PrintedProducts.scss
@@ -14,7 +14,7 @@
   position: relative;
   overflow: visible;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-}
+
   .printedProductImg {
     @extend %flex;
     background-color: #ffcaa6;
@@ -27,7 +27,7 @@
       transform: translateY(-25%);
       box-shadow: rgba(226, 196, 63, 0.25) 0px 13px 47px -5px, rgba(180, 71, 71, 0.3) 0px 8px 16px -8px;
     }
-  }
+
     .imgPrintedProduct {
       width: 100%;
       height: 200px;
@@ -68,13 +68,13 @@
       background-color: #ffcaa6;
     }
   }
-
+}
 
 svg {
   width: 15px;
   height: 15px;
 }
-
+}
 .cartBtn.hidden {
   display: none;
 }
@@ -145,4 +145,51 @@ button:hover svg {
   transform: scale(105%);
   border-color: #ffd8d8;
   animation: beatingHeart 1.2s infinite;
+}
+.input-container {
+  width: 220px;
+  position: relative;
+  padding: 10px;
+}
+
+.icon {
+  position: absolute;
+  right: 10px;
+  top: calc(50% + 5px);
+  transform: translateY(calc(-50% - 5px));
+}
+
+.inputSearch {
+  width: 100%;
+  height: 5vh;
+  padding: 10px;
+  transition: .2s linear;
+  border: 2.5px solid black;
+  font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+.inputSearch:focus {
+  outline: none;
+  border: 0.5px solid black;
+  box-shadow: -5px -5px 0px black;
+}
+
+.input-container:hover > .icon {
+  animation: anim 1s linear infinite;
+}
+
+@keyframes anim {
+  0%,
+  100% {
+    transform: translateY(calc(-50% - 5px)) scale(1);
+  }
+
+  50% {
+    transform: translateY(calc(-50% - 5px)) scale(1.1);
+  }
+}
+.filtersDivPrintedProducts{
+  @extend %flex;
 }
