--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -119,7 +119,7 @@ perspective: 1000px;
 }
 
 .flip-card__front, .flip-card__back {
-    padding: 20px;
+    padding: 15px 20px; 
     position: absolute;
     display: flex;
     flex-direction: column;
@@ -136,13 +136,14 @@ perspective: 1000px;
   .flip-card__back {
     width: 100%;
     transform: rotateY(180deg);
+    height: 63vh;
   }
   
   .flip-card__form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
+
   }
   
   .title {
@@ -182,7 +183,6 @@ perspective: 1000px;
   }
   
   .flip-card__btn {
-    margin: 20px 0 20px 0;
     width: 120px;
     height: 40px;
     border-radius: 5px;
